--- a/css/estilos.css
+++ b/css/estilos.css
@@ -82,4 +82,26 @@ mi-footer {
 	margin-left: 10px;
 	color: #014949;
 }
+.modMenu{
+	display: block;
+	margin: auto;
+	text-align: center;
+}
 
+.formNuevo{
+	display: block;
+	margin: auto;
+	text-align: center;
+}
+
+.labelNuevo{
+display: flex;
+  flex-flow: wrap;
+  align-items: center;
+  align-content: flex-end;
+  justify-content: flex-end;
+  margin-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  gap: 0.5rem;
+  width: 50%;
+}
